# StoryFlow-mvp

./: README.md
Code/: README.md
Code/StoryFlow-mvp-code/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
Code/StoryFlow-mvp-code/public/audio/: README.md
Code/StoryFlow-mvp-code/public/data/: candidates.json  gameConfig.json  story.json
Code/StoryFlow-mvp-code/src/: App.tsx  index.css  index.less  types.ts  vite-env.d.ts
Code/StoryFlow-mvp-code/src/audio/: audioManager.ts  constants.ts  index.ts
Code/StoryFlow-mvp-code/src/pages/: BlindDate.less  BlindDatePage.tsx  CreateRole.less  CreateRole.tsx  EndingPage.less  EndingPage.tsx  GamePage.less  GamePage.tsx  GamePlaceholder.tsx  HomePage.css  HomePage.less  HomePage.tsx  SelectPage.tsx
backend-python/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend-python/app/: __init__.py  main.py
backend-python/app/api/v1/: router.py
backend-python/app/core/: config.py  db.py
backend-python/tests/: test_health.py
其他文档/: story1.json  后续MVP版本开发执行计划.md
内容文档/: 完整剧本案例大纲.md
心域奇旅/: 官网设计.md  心域奇旅大平台需求文档20260318.md  都市迷情修订篇说明20260318.md
技术文档/: StoryFlow-后端方案-Python-FastAPI.md  StoryFlow-后端设计与部署方案.md  技术架构文档20260317.md  技术架构文档v1.0.md
设计文档/: 创建角色模块设计文档.md  完整设计文档.md  游戏剧情模块设计文档.md  移动端适配方案文档20260317.md  结局页设计文档.md  视觉设计202603123.md  选择相亲对象模块设计文档.md  页面样式与设计系统文档.md  首页设计文档.md
需求文档/: 姓名与选项库说明.md  执行计划20260316.md  执行计划20260317.md  简化版执行计划20260311.md  需求文档20260311.md  需求文档20260316.md  需求文档20260317.md
音源文档/: 基本音频设计.md
(+28 files in other folders)
